# eddplatform

./: .gitignore  README.md  pyproject.toml
deploy/k3s/: README.md
deploy/langfuse/: .env.example  README.md  docker-compose.yml
deploy/temporal/: README.md  docker-compose.yml
docs/: AI业务全流程研发体系_SOP.md  AI研发提效_调研与落地方案.md  EDD接入约定_被评系统与评估程序.md  业界整体方案盘点_从论文到实际.md  产品原型设计_发布评估台.md  开发迭代管理系统_开源选型清单与集成.md  开发迭代管理系统_选型与参考架构.md  版本化沙箱发布评估平台_基于开源的二次开发架构.md  评估代码与数据边界_eval-entry模式.md
examples/: e2e_convention_deploy.py  e2e_task_orchestration.py  e2e_temporal_task.py  eval_demo.py  langfuse_run.py  release_eval_demo.py  temporal_release_demo.py
examples/chatagent/: cases.py  compare.py  compare_frontdoor.py  compare_multiturn.py  config.py  deploy.py  deploy_guide.py  evaluators.py  frontdoor.py  multiturn_cases.py  run_guide.py  run_scenarios.py  target.py
examples/demo-eval/: .eddplatform.yaml  build.sh
examples/demo-system/: .eddplatform.yaml  README.md  build.sh
examples/edd-unit-template/: .eddplatform.yaml  (+2 more)
prototype/: index.html  product-form-proposal.html
tests/: conftest.py  e2e_ui_check.py  release_sample.py  test_api.py  test_backstage.py  test_case_api.py  test_case_git.py  test_case_repeat.py  test_case_store.py  test_case_yaml.py  test_convention.py  test_db.py  test_deploy_model.py  test_edd_bridge.py  test_engine.py  test_eval_dimensions.py  test_eval_program_api.py  test_eval_service.py  test_frontdoor.py  test_git_resolve.py  test_harbor.py  test_infra_shells.py  test_jira.py  test_langfuse.py  test_langfuse_client.py  test_models.py  test_orchestration.py  test_orchestrator.py  test_requirements.py  test_run_api.py  test_run_log_store.py  test_run_store.py  test_system_api.py  test_tag_api.py  test_tag_store.py  test_targets.py  test_task_api.py  test_temporal_case_dispatch.py  test_temporal_shared.py  test_temporal_workflow.py  (+1 more)
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+102 files in other folders)
