[project]
name = "eddplatform"
version = "0.0.1"
description = "Evaluation-Driven Development platform for agent systems — versioned ephemeral sandboxes + use-case-driven release evaluation & old-vs-new comparison."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
# 评估执行（框架锁定 pydantic-ai）
evals = ["pydantic-ai", "pydantic-evals"]
# 开源集成
integrations = ["langfuse", "temporalio"]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eddplatform"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
