[project]
name = "eddplatform"
version = "0.0.1"
description = "Evaluation-Driven Development platform for agent systems — versioned ephemeral sandboxes + use-case-driven release evaluation & old-vs-new comparison."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6",
    "pymysql>=1.2.0",
]

[project.optional-dependencies]
# 评估引擎（推荐、主干）：Langfuse —— 引擎 + 存储 + 老新对比 + 追踪
langfuse = ["langfuse>=2"]
# 可选 harness（框架无关，按团队习惯选；分数回灌 Langfuse）
deepeval = ["deepeval"]                # pytest 风格
pydantic-evals = ["pydantic-evals"]    # 仅 pydantic-ai 项目的可选后端
# 发布评估流水线编排
temporal = ["temporalio"]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eddplatform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
